@@ -3,9 +3,11 @@ package com.cashback.gold.service;
 import com.cashback.gold.dto.ornament.OrnamentRequest;
 import com.cashback.gold.dto.ornament.OrnamentResponse;
 import com.cashback.gold.dto.ornament.PriceBreakupDTO;
+import com.cashback.gold.entity.MetalRate;
 import com.cashback.gold.entity.Ornament;
 import com.cashback.gold.entity.PriceBreakup;
 import com.cashback.gold.exception.InvalidArgumentException;
+import com.cashback.gold.repository.MetalRateRepository;
 import com.cashback.gold.repository.OrnamentRepository;
 import com.cashback.gold.repository.PriceBreakupRepository;
 import com.cashback.gold.service.aws.S3Service;
@@ -29,6 +31,8 @@ public class OrnamentService {
     private final PriceBreakupRepository priceBreakupRepo;
     private final S3Service s3Service;
     private final ObjectMapper objectMapper;
+    private final MetalRateRepository metalRateRepo;
+
 
     public OrnamentResponse getById(Long id) {
         Ornament ornament = repo.findById(id)
@@ -46,25 +50,45 @@ public class OrnamentService {
 
     public OrnamentResponse create(MultipartFile mainImage, List<MultipartFile> subImages, String dataJson) {
         OrnamentRequest req = parse(dataJson);
-
         Ornament ornament = toEntity(req);
 
-        // Upload main image
         ornament.setMainImage(s3Service.uploadFile(mainImage));
-
-        // Upload and assign sub images (max 4)
         assignSubImages(ornament, subImages);
 
-        // Set price breakups
-        if (req.getPriceBreakups() != null) {
-            List<PriceBreakup> priceBreakups = req.getPriceBreakups().stream()
+        List<PriceBreakup> priceBreakups = null;
+        double basePrice = 0.0;
+        double goldRate = metalRateRepo.findByMetalType("GOLD")
+                .map(MetalRate::getRateInrPerGram)
+                .orElseThrow(() -> new InvalidArgumentException("Gold rate not available"));
+        if (req.getPriceBreakups() != null && !req.getPriceBreakups().isEmpty()) {
+
+
+            priceBreakups = req.getPriceBreakups().stream()
                     .map(dto -> toPriceBreakupEntity(dto, ornament))
-                    .collect(Collectors.toList());
+                    .toList();
+
+            for (PriceBreakup pb : priceBreakups) {
+                if (pb.getWeightG() != null && pb.getWeightG() > 0) {
+                    basePrice += pb.getWeightG() * goldRate;
+                }
+//                else {
+//                    basePrice += pb.getFinalValue() != null ? pb.getFinalValue() : 0;
+//                }
+            }
+
             ornament.setPriceBreakups(priceBreakups);
         }
 
+        // Apply making charges
+        double makingChargePercent = ornament.getMakingChargePercent() != null ? ornament.getMakingChargePercent() : 11.0;
+        double finalPrice = basePrice + (basePrice * makingChargePercent / 100);
+        ornament.setPrice(finalPrice);
+
+
         return toResponse(repo.save(ornament));
     }
+
+
 
     public OrnamentResponse update(Long id, MultipartFile mainImage, List<MultipartFile> subImages, String dataJson) {
         OrnamentRequest req = parse(dataJson);
@@ -80,34 +104,53 @@ public class OrnamentService {
             assignSubImages(ornament, subImages);
         }
 
-        // Update price breakups safely
-        if (req.getPriceBreakups() != null) {
+        // Recalculate base price using updated price breakups
+        List<PriceBreakup> priceBreakups = null;
+        double basePrice = 0.0;
+
+        if (req.getPriceBreakups() != null && !req.getPriceBreakups().isEmpty()) {
+            double goldRate = metalRateRepo.findByMetalType("GOLD")
+                    .map(MetalRate::getRateInrPerGram)
+                    .orElseThrow(() -> new InvalidArgumentException("Gold rate not available"));
+
+            priceBreakups = req.getPriceBreakups().stream()
+                    .map(dto -> toPriceBreakupEntity(dto, ornament))
+                    .toList();
+
             ornament.getPriceBreakups().clear();
-            for (PriceBreakupDTO dto : req.getPriceBreakups()) {
-                PriceBreakup breakup = toPriceBreakupEntity(dto, ornament);
-                ornament.getPriceBreakups().add(breakup);
+            ornament.getPriceBreakups().addAll(priceBreakups);
+
+            for (PriceBreakup pb : priceBreakups) {
+                if (pb.getWeightG() != null && pb.getWeightG() > 0) {
+                    basePrice += pb.getWeightG() * goldRate;
+                } else {
+                    basePrice += pb.getFinalValue() != null ? pb.getFinalValue() : 0;
+                }
             }
         }
 
+        double makingChargePercent = ornament.getMakingChargePercent() != null ? ornament.getMakingChargePercent() : 11.0;
+        double finalPrice = basePrice + (basePrice * makingChargePercent / 100);
+
+        ornament.setPrice(finalPrice);
+
         return toResponse(repo.save(ornament));
     }
+
 
     public void delete(Long id) {
         Ornament ornament = repo.findById(id)
                 .orElseThrow(() -> new InvalidArgumentException("Ornament not found with id: " + id));
 
-        // Delete main image from S3
         if (ornament.getMainImage() != null) {
             s3Service.deleteFile(ornament.getMainImage());
         }
 
-        // Delete all sub images from S3
         if (ornament.getSubImage1() != null) s3Service.deleteFile(ornament.getSubImage1());
         if (ornament.getSubImage2() != null) s3Service.deleteFile(ornament.getSubImage2());
         if (ornament.getSubImage3() != null) s3Service.deleteFile(ornament.getSubImage3());
         if (ornament.getSubImage4() != null) s3Service.deleteFile(ornament.getSubImage4());
 
-        // Now delete ornament from DB
         repo.deleteById(id);
     }
 
@@ -118,7 +161,6 @@ public class OrnamentService {
                 .map(this::toResponse)
                 .toList();
     }
-
 
     private OrnamentRequest parse(String json) {
         try {
@@ -135,30 +177,38 @@ public class OrnamentService {
                 .description1(r.getDescription1()).description2(r.getDescription2()).description3(r.getDescription3())
                 .description(r.getDescription()).material(r.getMaterial())
                 .purity(r.getPurity()).quality(r.getQuality()).warranty(r.getWarranty())
-                .itemType(r.getItemType()) // ✅ Add this line
-                .details(r.getDetails())
+                .itemType(r.getItemType()).details(r.getDetails())
+                .origin(r.getOrigin() != null ? r.getOrigin() : "INDIAN")
+                .makingChargePercent(r.getMakingChargePercent() != null ? r.getMakingChargePercent() : 11.0)
                 .build();
     }
 
 
     private void updateEntity(Ornament o, OrnamentRequest r) {
-        o.setName(r.getName()); o.setPrice(r.getPrice());
-        o.setCategory(r.getCategory()); o.setSubCategory(r.getSubCategory()); o.setGender(r.getGender());
-        o.setDescription1(r.getDescription1()); o.setDescription2(r.getDescription2()); o.setDescription3(r.getDescription3());
-        o.setDescription(r.getDescription()); o.setMaterial(r.getMaterial());
-        o.setPurity(r.getPurity()); o.setQuality(r.getQuality()); o.setWarranty(r.getWarranty());
-        o.setItemType(r.getItemType()); // ✅ Add this line
+        o.setName(r.getName());
+        o.setCategory(r.getCategory());
+        o.setSubCategory(r.getSubCategory());
+        o.setGender(r.getGender());
+        o.setDescription1(r.getDescription1());
+        o.setDescription2(r.getDescription2());
+        o.setDescription3(r.getDescription3());
+        o.setDescription(r.getDescription());
+        o.setMaterial(r.getMaterial());
+        o.setPurity(r.getPurity());
+        o.setQuality(r.getQuality());
+        o.setWarranty(r.getWarranty());
+        o.setItemType(r.getItemType());
         o.setDetails(r.getDetails());
+        o.setOrigin(r.getOrigin());
+        o.setMakingChargePercent(r.getMakingChargePercent());
+        // DO NOT set price here
     }
 
-
     private void assignSubImages(Ornament ornament, List<MultipartFile> subImages) {
-        // Step 1: Null or empty check
         if (subImages == null || subImages.isEmpty()) {
             throw new InvalidArgumentException("All 4 subImages (subImage1 to subImage4) are required.");
         }
 
-        // Step 2: Validate content types before upload
         for (int i = 0; i < subImages.size(); i++) {
             MultipartFile file = subImages.get(i);
             if (file == null || file.isEmpty()) {
@@ -169,12 +219,10 @@ public class OrnamentService {
             }
         }
 
-        // Step 3: Ensure exactly 4 sub images are provided
         if (subImages.size() < 4) {
             throw new InvalidArgumentException("Exactly 4 subImages are required.");
         }
 
-        // Step 4: Upload only after validation
         List<String> urls = subImages.stream()
                 .map(s3Service::uploadFile)
                 .toList();
@@ -194,28 +242,39 @@ public class OrnamentService {
         );
     }
 
-
     private OrnamentResponse toResponse(Ornament o) {
         return OrnamentResponse.builder()
-                .id(o.getId()).name(o.getName()).price(o.getPrice())
-                .category(o.getCategory()).subCategory(o.getSubCategory()).gender(o.getGender())
-                .description1(o.getDescription1()).description2(o.getDescription2()).description3(o.getDescription3())
-                .description(o.getDescription()).mainImage(o.getMainImage())
+                .id(o.getId())
+                .name(o.getName())
+                .price(o.getPrice())
+                .category(o.getCategory())
+                .subCategory(o.getSubCategory())
+                .gender(o.getGender())
+                .description1(o.getDescription1())
+                .description2(o.getDescription2())
+                .description3(o.getDescription3())
+                .description(o.getDescription())
+                .mainImage(o.getMainImage())
                 .subImages(List.of(
                         o.getSubImage1(),
                         o.getSubImage2(),
                         o.getSubImage3(),
                         o.getSubImage4()
                 ).stream().filter(url -> url != null).collect(Collectors.toList()))
-                .material(o.getMaterial()).purity(o.getPurity()).quality(o.getQuality())
+                .material(o.getMaterial())
+                .purity(o.getPurity())
+                .quality(o.getQuality())
                 .warranty(o.getWarranty())
                 .itemType(o.getItemType())
                 .details(o.getDetails())
+                .origin(o.getOrigin())
+                .makingChargePercent(o.getMakingChargePercent())
                 .priceBreakups(o.getPriceBreakups().stream()
                         .map(this::toPriceBreakupDTO)
                         .collect(Collectors.toList()))
                 .build();
     }
+
 
     private PriceBreakup toPriceBreakupEntity(PriceBreakupDTO dto, Ornament ornament) {
         return PriceBreakup.builder()
